--- a/dataset_docs/.md
+++ b/dataset_docs/.md
@@ -1,6 +1,16 @@
+moda_oc_7d_fk
+
+# usages
+* FK NMS Early-Alert Dashboard
+
+# aliases
+* previously named OC_c7fe_e1ee_913c
+* `/srv/imars_objects/fk/MEAN_7D_MODA/OC/`
+* `/srv/imars_objects/moda_oc_7d_fk`
+
 More details in [this spreadsheet](https://docs.google.com/spreadsheets/d/18fJk0qeZiis7UMdJ0QjfMAcVJGco2TpqtRMaDSt9rWA/edit?usp=sharing).
 
-This dataset is being used by the FK NMS Early-Alert Dashboard.
+--------------------------------------------
 
 ```
 <!-- Modis Ocean Color ================================================================
@@ -110,7 +120,7 @@ netcdf MODA_2022288_2022294_7D_FK_OC.nc {
 ```
     <accessibleViaFiles>false</accessibleViaFiles>
 ```xml
-<dataset type="EDDGridFromNcFiles" datasetID="OC_c7fe_e1ee_913c" active="true">
+<dataset type="EDDGridFromNcFiles" datasetID="moda_oc_7d_fk" active="true">
     <reloadEveryNMinutes>10080</reloadEveryNMinutes>
     <updateEveryNMillis>10000</updateEveryNMillis>
     <fileDir>/srv/imars-objects/fk/MEAN_7D_MODA/OC/</fileDir>
